# tapo

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  SUPPORTED_DEVICES.md  TODO.md  TROUBLESHOOTING.md  package-lock.json
tapo/: Cargo.toml
tapo-mcp/: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  server.json
tapo-mcp/openclaw-skill/: SKILL.md
tapo-mcp/openclaw-skill/references/: setup.md  tapo-mcp-setup.md
tapo-mcp/src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  models.rs  server.rs  telemetry.rs
tapo-mcp/src/requests/: check_device.rs  get_devices.rs  mod.rs
tapo-mcp/src/resources/: list_devices.rs  mod.rs
tapo-mcp/src/tools/: check_device.rs  control_device.rs  get_device_state.rs  list_devices.rs  mod.rs  set_device_state.rs  take_snapshot.rs
tapo-mcp/tests/: auth.rs
tapo-py/: .gitignore  Cargo.toml  pyproject.toml  tapo.pyi
tapo-py-test/: pyproject.toml
tapo-py/examples/: common.py  tapo_camera_ptz.py  tapo_discover_devices.py  tapo_generic_device.py  tapo_generic_device_toggle.py  tapo_h100.py  tapo_ke100.py  tapo_l510.py  tapo_l530.py  tapo_l900.py  tapo_l920.py  tapo_l930.py  tapo_p100.py  tapo_p110.py  tapo_p110_schedule.py  tapo_p110_timer.py  tapo_p300.py  tapo_p304.py
tapo-py/examples/tapo_p110_control/: README.md  tapo_control.py
tapo-py/src/: api.rs  api_client.rs  errors.rs  handlers.rs  lib.rs  requests.rs  responses.rs  runtime.rs
tapo-py/src/api/: api_client.rs  camera_ptz_handler.rs  child_devices.rs  color_light_handler.rs  discovery.rs  generic_device_handler.rs  hub_handler.rs  light_handler.rs  plug_energy_monitoring_handler.rs  plug_handler.rs  power_strip_energy_monitoring_handler.rs  power_strip_handler.rs  py_handler_ext.rs  py_tapo_handler.rs  rgb_light_strip_handler.rs  rgbic_light_strip_handler.rs
tapo-py/src/api/child_devices/: ke100_handler.rs  power_strip_plug_energy_monitoring_handler.rs  power_strip_plug_handler.rs  s200_handler.rs  s200b_handler.rs  s210_handler.rs  t100_handler.rs  t110_handler.rs  t300_handler.rs  t31x_handler.rs
tapo-py/src/api/discovery/: device_discovery.rs  device_discovery_raw.rs  discovery_raw_result.rs  discovery_result.rs
tapo-py/src/handlers/: child_devices.rs  color_light_handler.rs  energy_monitoring_plug_handler.rs  generic_device_handler.rs  hub_handler.rs  light_handler.rs  plug_energy_monitoring_handler.rs  plug_handler.rs  power_strip_handler.rs
tapo-py/src/handlers/child_devices/: ke100_handler.rs  power_strip_plug_handler.rs  s200b_handler.rs  t100_handler.rs  t110_handler.rs  t300_handler.rs  t31x_handler.rs
tapo-py/src/requests/: energy_data_interval.rs  play_alarm.rs  power_data_interval.rs  segment_effect_rule.rs  set_device_info.rs
tapo-py/src/requests/set_device_info/: color_light.rs  lighting_effect.rs
tapo-py/src/responses/: child_device_list_hub_result.rs
tapo-py/src/responses/child_device_list_hub_result/: s200_result.rs  s200b_result.rs  t100_result.rs  t110_result.rs  t300_result.rs
tapo-py/tapo-py/tapo/: __init__.py  __init__.pyi  api_client.pyi  camera_ptz_handler.pyi  color_light_handler.pyi  debug_ext.pyi  device_discovery.pyi  device_discovery_raw.pyi  device_management_ext.pyi  device_type.pyi  discovery_raw_result.pyi  discovery_result.pyi  generic_device_handler.pyi  hub_handler.pyi  ke100_handler.pyi  light_handler.pyi  on_off_ext.pyi  plug_energy_monitoring_handler.pyi  plug_handler.pyi  power_strip_energy_monitoring_handler.pyi  power_strip_handler.pyi  power_strip_plug_energy_monitoring_handler.pyi  power_strip_plug_handler.pyi  refresh_session_ext.pyi  rgb_light_strip_handler.pyi  rgbic_light_strip_handler.pyi  s200_handler.pyi  s200b_handler.pyi  s210_handler.pyi  schedule_ext.pyi  t100_handler.pyi  t110_handler.pyi  t300_handler.pyi  t31x_handler.pyi  timer_ext.pyi  to_dict_ext.pyi  types.pyi
tapo-py/tapo-py/tapo/requests/: __init__.pyi  energy_data_interval.pyi  play_alarm.pyi  schedule_rule.pyi  (+2 more)
tapo/examples/: common.rs  tapo_camera_ptz.rs  tapo_discover_devices.rs  tapo_generic_device.rs  tapo_generic_device_toggle.rs  tapo_h100.rs  tapo_h110_ir.rs  tapo_h200.rs  tapo_ke100.rs  tapo_l510.rs  tapo_l530.rs  tapo_l900.rs  tapo_l930.rs  tapo_p100.rs  tapo_p110.rs  tapo_p110_schedule.rs  tapo_p110_timer.rs  tapo_p300.rs  tapo_p304.rs
tapo/src/: api.rs  encryption.rs  error.rs  lib.rs  python.rs  requests.rs  responses.rs  tapo_date_format.rs  utils.rs
tapo/src/api/: api_client.rs  camera_hub_handler.rs  camera_ptz_handler.rs  capabilities.rs  child_devices.rs  color_light_handler.rs  color_light_strip_handler.rs  discovery.rs  energy_monitoring_plug_handler.rs  generic_device_handler.rs  h200_handler.rs  handler_ext.rs  hub_handler.rs  light_handler.rs  plug.rs  plug_energy_monitoring_handler.rs  plug_handler.rs  power_strip_energy_monitoring_handler.rs  power_strip_handler.rs  protocol.rs  rgb_light_strip_handler.rs  rgbic_light_strip_handler.rs  rtsp_snapshot.rs  tapo_handler.rs
tapo/src/requests/: color.rs  device_reboot.rs  energy_data_interval.rs  get_child_device_list.rs  get_energy_data.rs  get_power_data.rs  handshake.rs  lighting_effect.rs  login_device.rs  multiple_request.rs  play_alarm.rs  power_data_interval.rs  schedule.rs  secure_passthrough.rs  segment_effect_rule.rs  set_device_info.rs  smart_cam.rs  tapo_request.rs  timer.rs
tapo/src/responses/: child_device_component_list_result.rs  child_device_list_hub_result.rs  child_device_list_power_strip_result.rs  child_device_list_result.rs  component_list_result.rs  control_child_result.rs  current_power_result.rs  decodable_result_ext.rs  device_info_result.rs  device_usage_energy_monitoring_result.rs  device_usage_result.rs  energy_data_result.rs  energy_usage_result.rs  get_support_alarm_type_list_result.rs  handshake_result.rs  power_data_result.rs  power_state.rs  preset.rs  rtsp_stream_url.rs  schedule_rule_result.rs  snapshot_result.rs  supported_alarm_type_list_result.rs  tapo_response.rs  tapo_result.rs  temperature_unit.rs  timer_result.rs  token_result.rs  trigger_logs_result.rs
(+268 files in other folders)
