[workspace]
resolver = "3"

members = ["tapo", "tapo-py"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4.34", default-features = false }
log = "0.4"
pyo3 = { version = "0.27" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.48", default-features = false }
