[workspace]
resolver = "3"

members = ["tapo", "tapo-py", "tapo-mcp"]
# Exclude `tapo-py` from bare workspace-level commands (`cargo run --example ...`,
# `cargo test`, etc.). It enables `pyo3/extension-module`, which leaves the Python
# C API symbols undefined; feature unification would propagate that into `tapo`
# and break linking of binaries and examples. Build it explicitly with `-p tapo-py`
# or via maturin.
default-members = ["tapo", "tapo-mcp"]

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4.34", default-features = false }
log = "0.4"
pyo3 = { version = "0.29" }
schemars = { version = "1.2" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
thiserror = "2.0"
tokio = { version = "1.52", default-features = false }
