[package]
name = "tapo-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = "0.8"
config = "0.15"
rmcp = { version = "1.1", features = ["server", "macros", "transport-streamable-http-server"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
opentelemetry = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32"

tapo = { path = "../tapo" }
