[package]
name = "tapo-mcp"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = "0.8"
base64 = { workspace = true }
config = "0.15"
rmcp = { version = "1.6", features = ["server", "macros", "transport-streamable-http-server"] }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = "2.6"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros"] }

opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = "0.31"
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }

tapo = { path = "../tapo", features = ["json-schema"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
