[tool.poetry]
name = "tapo-py-test"
version = "0.1.0"
description = ""
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tapo = { path = "../tapo-py", develop = true }
plugp100 = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
