[package]
name = "tapo-py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "tapo"
crate-type = ["cdylib"]
doc = false

[features]
default = []

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, default-features = false }
log = { version = "0.4", default-features = false }
pyo3 = { workspace = true, features = [
    "chrono",
    "experimental-async",
    "extension-module",
    "py-clone",
] }
pyo3-log = { version = "0.12" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["rt-multi-thread", "sync"] }

tapo = { path = "../tapo", features = ["python"] }
