[package]
name = "tapo-py"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[lib]
name = "tapo"
crate-type = ["cdylib"]
doc = false

[features]
default = []

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true, features = [
    "chrono",
    "experimental-async",
    "extension-module",
    "py-clone",
] }
pyo3-async-runtimes = { version = "0.27", features = ["attributes", "tokio-runtime"] }
pyo3-log = { version = "0.13" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }

tapo = { path = "../tapo", features = ["python"] }
