[tool.poetry]
name = "tapo"
version = "0.1.1"
description = "Unofficial Tapo API Client. Works with TP-Link Tapo smart devices. Tested with plugs (P100, P105, P110, P115)."
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]

[project]
name = "tapo"
version = "0.1.1"
description = "Unofficial Tapo API Client. Works with TP-Link Tapo smart devices. Tested with plugs (P100, P105, P110, P115)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Mihai Dinculescu", email = "mihai.dinculescu@outlook.com" },
]
maintainers = [
    { name = "Mihai Dinculescu", email = "mihai.dinculescu@outlook.com" },
]
keywords = ["Tapo", "TP-Link", "Smart Home", "Home Automation", "IoT"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Embedded Systems",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
]
requires-python = ">=3.7"

[project.urls]
Changelog = 'https://github.com/mihai-dinculescu/tapo/blob/main/CHANGELOG.md'
Funding = 'https://github.com/mihai-dinculescu'
Homepage = 'https://github.com/mihai-dinculescu/tapo'
Source = 'https://github.com/mihai-dinculescu/tapo'

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
maturin = ">=1.0,<2.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = 'pyo3'
features = ["pyo3/extension-module"]
sdist-include = ["README.md", "CHANGELOG.md", "LICENSE"]
