[tool.poetry]
name = "tapo"
version = "0.8.1"
description = "Unofficial Tapo API Client. Works with TP-Link Tapo smart devices. Tested with light bulbs (L510, L520, L530, L535, L610, L630), light strips (L900, L920, L930), plugs (P100, P105, P110, P115), power strips (P300, P304), hubs (H100), switches (S200B) and sensors (KE100, T100, T110, T300, T310, T315)."
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]

[project]
name = "tapo"
version = "0.8.1"
description = "Unofficial Tapo API Client. Works with TP-Link Tapo smart devices. Tested with light bulbs (L510, L520, L530, L535, L610, L630), light strips (L900, L920, L930), plugs (P100, P105, P110, P115), power strips (P300, P304), hubs (H100), switches (S200B) and sensors (KE100, T100, T110, T300, T310, T315)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mihai Dinculescu", email = "mihai.dinculescu@outlook.com" }]
maintainers = [{ name = "Mihai Dinculescu", email = "mihai.dinculescu@outlook.com" }]
keywords = ["Tapo", "TP-Link", "Smart Home", "Home Automation", "IoT"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Embedded Systems",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"

[project.urls]
Changelog = 'https://github.com/mihai-dinculescu/tapo/blob/main/CHANGELOG.md'
Funding = 'https://github.com/mihai-dinculescu'
Homepage = 'https://github.com/mihai-dinculescu/tapo'
Source = 'https://github.com/mihai-dinculescu/tapo'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
maturin = ">=1.0,<2.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "tapo-py"
bindings = 'pyo3'
features = ["pyo3/extension-module"]
include = ["README.md", "CHANGELOG.md", "LICENSE", "tapo-py/tapo-py/tapo/*"]

[tool.black]
line-length = 100
