[package]
name = "tapo"
version = "0.9.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
description = "Unofficial Tapo API Client. Works with TP-Link Tapo smart devices. Tested with light bulbs (L510, L520, L530, L535, L610, L630), light strips (L900, L920, L930), plugs (P100, P105, P110, P110M, P115), power strips (P300, P304M, P306, P316M), hubs (H100), switches (S200B, S200D, S210), sensors (KE100, T100, T110, T300, T310, T315) and cameras (C210, C220, C225, C325WB, C520WS, TC40, TC70)."
keywords = ["IOT", "tapo", "smart-home", "smart-bulb", "smart-plug"]
categories = ["hardware-support", "embedded", "development-tools"]
readme = "README.md"
repository = "https://github.com/mihai-dinculescu/tapo"

[features]
default = []
debug = []
json-schema = ["dep:schemars"]
python = ["dep:pyo3"]

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true, features = ["clock", "serde"] }
crc32fast = "1.5"
itertools = "0.14"
lazy_static = "1.5"
log = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["cookies", "json", "rustls"] }
retina = "0.4"
serde = { workspace = true, features = ["derive", "serde_derive"] }
serde_json = { workspace = true }
serde_with = "3.19"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1"
uuid = { version = "1.23", features = ["serde", "v4"] }

# security
aes = "0.9"
base16ct = { version = "1.0", features = ["alloc"] }
base64 = { workspace = true }
cbc = { version = "0.2", features = ["alloc"] }
rand = "0.10"
rsa = { version = "0.10.0-rc.17", features = ["getrandom"] }
sha1 = "0.11"
md-5 = "0.11"
sha2 = "0.11"

# JSON Schema
schemars = { workspace = true, optional = true }

# FFI
pyo3 = { workspace = true, features = ["serde", "chrono", "multiple-pymethods"], optional = true }

[dev-dependencies]
once_cell = "1.21"
env_logger = "0.11"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
